themes/hugo-zen/static/css/custom.css
@font-face {
    font-family: "Quattrocento";
    src: url("/fonts/quattrocento-latin-400.woff2") format('woff2');
    src: url("/fonts/quattrocento-latin-400.woff") format('woff');

    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Roboto";
    src: url("/fonts/roboto-latin-400.woff2") format('woff2');
    src: url("/fonts/roboto-latin-400.woff") format('woff');

    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Fredericka the Great";
    src: url("/fonts/fredericka-the-great-latin-400.woff2") format('woff2');
    src: url("/fonts/fredericka-the-great-latin-400.woff") format('woff');

    font-weight: 400;
    font-style: normal;
}

section {
    font-size: 1.2em;
}

body {
/*  font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; */
  font-family: "Quattrocento";
  background-color: #FCFCFC;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Roboto";
}

h1 { font-size: 2.1rem; }
h2 { font-size: 1.9rem; }
h3 { font-size: 1.7rem; }
h4, h5, h6 { font-size: 1.5rem; }


img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  border: 0;
}

header,
footer {
  margin: 4rem 0;
  text-align: center;
}

main {
  margin: 4rem 0;
}

.container {
  width: 90%;
  max-width: 600px;
}

.header-compact {
    display: table;
    height: 60px;
}

.header-left {
    display: table-cell;
    width: 60px;
    margin-top: 1rem;
}

.header-right {
    display: table-cell;
    padding-left: 2em;
    vertical-align: top;
}

.header-logo {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border: 4px solid #E1E1E1;
}

.site-title {
  font-family: "Fredericka the Great";
  font-variant: small-caps;
  font-size: 2em;
  margin-top: 2rem;
  margin-bottom: 0;
}

.site-title-compact {
  font-family: "Fredericka the Great";
  font-variant: small-caps;
  font-size: 2em;
  margin: 0;
}

.entry-title {
  margin-bottom: 0;
}

.entry-title a {
  text-decoration: none;
}

.entry-meta {
  font-family: "Roboto";
    
  display: inline-block;
  margin-bottom: 2rem;
  font-size: 1.7rem;
  color: #888;
}

.footer-link {
  margin: 2rem 0;
}

.hr {
  height: 1px;
  margin: 2rem 0;
  background: #E1E1E1;
  background: -webkit-gradient(linear, left top, right top, from(white), color-stop(#E1E1E1), to(white));
  background: -webkit-linear-gradient(left, white, #E1E1E1, white);
  background: linear-gradient(to right, white, #E1E1E1, white);
}

html, body {
    min-height: calc(100vh - 10px);
}

body {
    border-top: 5px solid #74dc7e;
    border-bottom: 5px solid #74dc7e;
}

footer {
    font-family: "Roboto";
}

.copyright {
    color: #E1E1E1;
}

.copyright a {
    color: #E1E1E1;
    text-decoration: none;
    border-bottom: 1px dotted #E1E1E1;
}

.copyright a:hover {
    color: #74dc7e;
    border-bottom: 1px dotted #74dc7e;
}

a {
    color: #74dc7e;
}

.main-menu {
    font-family: "Roboto";
}

.main-menu ul li { list-style: none; display: inline; }
.main-menu ul li:after { 
    content: "\2022\0020"; /* 23FA 2739 */
    color: #E1E1E1;
}
.main-menu ul li:last-child:after { content: none; }

.main-menu ul:before {
    content: "\2039";
    color: #E1E1E1;
}

.main-menu ul:after {
    content: "\203A";
    color: #E1E1E1;
}

.main-menu a {
    text-decoration: none;
}

.menu-active {
    font-weight: bold;
}

.footer-link ul li { list-style: none; display: inline; }
.footer-link ul li:after { 
    content: "\2022\0020"; /* 23FA 2739 */
    color: #E1E1E1;
}
.footer-link ul li:last-child:after { content: none; }

